# tracer

./: Cargo.toml  README.md
examples/: spheres.rs
src/: bsdf.rs  camera.rs  canvas.rs  geometry.rs  hitable_list.rs  lib.rs  light.rs  main.rs  material.rs  model_object.rs  query.rs  ray.rs  renderer.rs  sample.rs  sampler.rs  scene.rs  scene_object.rs  sphere.rs
src/bsdf/: black_body_bsdf.rs  bsdf.rs  mod.rs  simple_bsdf.rs  simple_dielectric_bsdf.rs  simple_lambertian_bsdf.rs  simple_metal_bsdf.rs
src/core/: bsdf.rs  geometry.rs  mod.rs  sampler.rs
src/geometry/: geometry.rs  mod.rs  sphere.rs
src/light/: light.rs  mod.rs  no_light.rs  point_light.rs  simple_lights.rs
src/scene/: mod.rs  model_object.rs  point_light_object.rs  scene.rs  scene_object.rs
tests/: test_canvas.rs  test_scene.rs  test_sphere.rs  test_sphere_model.rs
