[package]
name = "tracer"
version = "0.1.0"
edition = "2021"
keywords = ["graphics"]
categories = ["graphics"]
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
description = "An offline path tracer."

[dependencies]
cglinalg = { git = "https://github.com/lambdaxymox/cglinalg", version = "0.15.6" }
rand = "0.8.5"

[dev-dependencies]
approx = "0.5.1"

